--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,17 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.11.0
   firebase_auth: ^5.4.2
+  firebase_database: ^11.3.2
   google_sign_in: ^6.2.2
   google_nav_bar: ^5.0.7
   line_icons: ^2.0.1 
-  flutter_speedtest: ^0.2.0
+  flutter_speedtest: 0.0.3+3
   speed_test_dart: ^1.0.5+0
   http: ^1.3.0
+  geolocator: ^12.0.0
+  permission_handler: ^10.4.0
+  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
